# blastoise

./: README.md  requirements-dev.txt  requirements.txt
api/api/: settings.py  urls.py
api/scrapper/: models.py  serializers.py  urls.py  views.py
api/scrapper/migrations/: 0001_initial.py  0002_delete_pagelink.py  0003_page_links.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: HelloWorld.vue
frontend/src/store/: index.js
frontend/src/store/modules/: pages.js
links_fetcher/: README.md  pyproject.toml
links_fetcher/src/links_fetcher_robsonfs/: __init__.py  core.py  main.py
links_fetcher/src/tests/: test_core.py
